<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6A9"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="257dp"
        android:layout_height="227dp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="165dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="327dp"
        android:layout_height="74dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        tools:layout_editor_absoluteX="46dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textSize="18sp" />
    </ScrollView>

    <Button
        android:id="@+id/answerB"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:backgroundTint="#5A73FD"
        android:text="@string/answerB"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameApp"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/answerA"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:backgroundTint="#5A73FD"
        android:text="@string/answerA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <Button
        android:id="@+id/answerD"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:backgroundTint="#5A73FD"
        android:text="@string/answerD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameApp"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/answerC"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#5A73FD"
        android:text="@string/answerC"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countQ"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/BtnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:backgroundTint="#39C539"
        android:fontFamily="monospace"
        android:text="@string/next"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/BtnCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#39C539"
        android:fontFamily="monospace"
        android:text="@string/back"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="662dp" />

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="158dp"
        android:layout_height="41dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#D60000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/score"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:backgroundTint="#F60303"
        android:fontFamily="serif-monospace"
        android:text="@string/score"
        android:textSize="18sp"
        app:cornerRadius="100px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>